[package]
name = "ydlidar_driver"
version = "0.1.0"
authors = ["Takeshi Ishita <ishitah.takeshi@gmail.com>"]
edition = "2021"
license = "Apache-2.0"
description = "YDLiDAR Driver in Rust"
repository = "https://github.com/tier4/ydlidar_driver"
homepage = "https://tier4.jp/"
keywords = ["LiDAR", "Driver", "Localization", "Perception"]
categories = ["lidar", "localization"]
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2.2"
crossbeam-channel = "0.5.8"
crossbeam-utils = "0.8.16"
ydlidar_data = {path = "../ydlidar-data"}

[dev-dependencies]
clap = { version = "4.5.19", features = ["derive"] }
piston_window = "0.132.0"
serde = { version = "1.0.210", features = ["std", "derive"] }
serde_json = "1.0.128"
ydlidar_data = {path = "../ydlidar-data", features = ["serde"]}
plotters-piston = {git = "https://github.com/BBArikL/plotters-piston"}
plotters = { version =  "0.3.7", default-features = false, features = ["ttf", "all_series"] }
